arm64: dts: qcom: xiaomi-scorpio: Add firmware names

--- a/arch/arm64/boot/dts/qcom/msm8996-xiaomi-scorpio.dts
+++ b/arch/arm64/boot/dts/qcom/msm8996-xiaomi-scorpio.dts
@@ -242,6 +242,8 @@
 
 &adsp_pil {
 	status = "okay";
+
+	firmware-name = "qcom/msm8996/scorpio/adsp.mbn";
 };
 
 &blsp2_i2c1 {
@@ -380,6 +382,12 @@
 	vcca-supply = <&vreg_l28a_0p925>;
 };
 
+&gpu {
+	zap-shader {
+		firmware-name = "qcom/msm8996/scorpio/a530_zap.mbn";
+	};
+};
+
 &mdp_smmu {
 	qcom,no-smr-check;
 	qcom,skip-init;
@@ -400,6 +408,9 @@
 	status = "okay";
 
 	pll-supply = <&vreg_l12a_1p8>;
+
+	firmware-name = "qcom/msm8996/scorpio/mba.mbn",
+			"qcom/msm8996/scorpio/modem.mbn";
 };
 
 &pcie0 {
@@ -512,6 +523,8 @@
 	status = "disabled";
 
 	px-supply = <&vreg_lvs2a_1p8>;
+
+	firmware-name = "qcom/msm8996/scorpio/slpi.mbn";
 };
 
 &sound {
@@ -626,6 +639,10 @@
 	vddp-ref-clk-supply = <&vreg_l25a_1p2>;
 	vddp-ref-clk-max-microamp = <100>;
 	vddp-ref-clk-always-on;
+};
+
+&venus {
+	firmware-name = "qcom/msm8996/scorpio/venus.mbn";
 };
 
 &wcd9335 {
