arm64: dts: qcom: xiaomi-scorpio: Disable SLPI again
Enabling SLPI caused some trouble with ADSP where SLIMBus would not start
if ADSP was remoteproc2. Disable SLPI again since it is not used at the
moment anyway.

--- a/arch/arm64/boot/dts/qcom/msm8996-xiaomi-scorpio.dts
+++ b/arch/arm64/boot/dts/qcom/msm8996-xiaomi-scorpio.dts
@@ -508,7 +508,8 @@
 };
 
 &slpi_pil {
-	status = "okay";
+	/* Enabling breaks SLIMBus. Disable for now since it is not used anyway */
+	status = "disabled";
 
 	px-supply = <&vreg_lvs2a_1p8>;
 };
