arm64: dts: qcom: msm8996-xiaomi-*: Enable SMBCharger
Enable pmi8994_smbchg and assign chg_otg as vbus supply for dwc3.

Signed-off-by: Yassine Oudjana <y.oudjana@protonmail.com>

--- a/arch/arm64/boot/dts/qcom/msm8996-xiaomi-natrium.dts
+++ b/arch/arm64/boot/dts/qcom/msm8996-xiaomi-natrium.dts
@@ -105,6 +105,10 @@
 	qcom,switching-freq = <600>;
 };
 
+&pmi8996_smbchg {
+	monitored-battery = <&battery>;
+};
+
 &q6asmdai {
 	dai@0 {
 		reg = <0>;
