--- a/arch/arm64/boot/dts/qcom/msm8996-xiaomi-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-xiaomi-common.dtsi
@@ -344,6 +344,10 @@
 	};
 };
 
+&pmi8994_smbchg {
+	status = "okay";
+};
+
 &slpi_pil {
 	status = "okay";
 
@@ -363,6 +367,8 @@
 	/* usb3-phy is not used on this device */
 	phys = <&hsusb_phy1>;
 	phy-names = "usb2-phy";
+
+	vbus-supply = <&chg_otg>;
 
 	maximum-speed = "high-speed";
 	snps,is-utmi-l1-suspend;
