--- a/arch/arm64/boot/dts/qcom/msm8996-xiaomi-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-xiaomi-common.dtsi
@@ -304,6 +304,12 @@
 	linux,code = <KEY_VOLUMEDOWN>;
 };
 
+&pmi8994_smbchg {
+	status = "okay";
+
+	monitored-battery = <&battery>;
+};
+
 &slpi_pil {
 	status = "okay";
 
@@ -323,6 +329,8 @@
 	/* usb3-phy is not used on this device */
 	phys = <&hsusb_phy1>;
 	phy-names = "usb2-phy";
+
+	usb-psy-name = "qcom-smbchg-usb";
 
 	maximum-speed = "high-speed";
 	snps,is-utmi-l1-suspend;
