arm64: dts: qcom: msm8996-xiaomi-*: Enable haptics
Enable PMIC haptics and add LRA properties on msm8996-xiaomi-scorpio
and msm8996-xiaomi-natrium.

Signed-off-by: Yassine Oudjana <y.oudjana@protonmail.com>

--- a/arch/arm64/boot/dts/qcom/msm8996-xiaomi-natrium.dts
+++ b/arch/arm64/boot/dts/qcom/msm8996-xiaomi-natrium.dts
@@ -89,6 +89,15 @@
 	monitored-battery = <&battery>;
 };
 
+&pmi8994_haptics {
+	status = "okay";
+
+	qcom,wave-play-rate-us = <4166>;
+	qcom,actuator-type = <HAP_TYPE_LRA>;
+	qcom,wave-shape = <HAP_WAVE_SINE>;
+	qcom,brake-pattern = [03 03 03 02];
+};
+
 &pmi8994_wled {
 	status = "okay";
 
