arm64: dts: qcom: msm8996-xiaomi-*: Enable PMIC fuel gauge
Enable pmi8994_fg and add battery data.

Signed-off-by: Yassine Oudjana <y.oudjana@protonmail.com>

--- a/arch/arm64/boot/dts/qcom/msm8996-xiaomi-natrium.dts
+++ b/arch/arm64/boot/dts/qcom/msm8996-xiaomi-natrium.dts
@@ -16,6 +16,14 @@
 	chassis-type = "handset";
 	qcom,msm-id = <305 0x10000>;
 	qcom,board-id = <47 0>;
+
+	battery: battery {
+		compatible = "simple-battery";
+
+		charge-full-design-microamp-hours = <3800000>;
+		voltage-min-design-microvolt = <3400000>;
+		voltage-max-design-microvolt = <4400000>;
+	};
 };
 
 &adsp_pil {
@@ -75,6 +83,10 @@
 &mss_pil {
 	firmware-name = "qcom/msm8996/natrium/mba.mbn",
 			"qcom/msm8996/natrium/modem.mbn";
+};
+
+&pmi8994_fg {
+	monitored-battery = <&battery>;
 };
 
 &pmi8994_wled {
