arm64: dts: qcom: msm8996-xiaomi-*: Add battery data
Add battery nodes needed for PMIC power supply blocks.

Signed-off-by: Yassine Oudjana <y.oudjana@protonmail.com>

--- a/arch/arm64/boot/dts/qcom/msm8996-xiaomi-gemini.dts
+++ b/arch/arm64/boot/dts/qcom/msm8996-xiaomi-gemini.dts
@@ -35,6 +35,11 @@
 	firmware-name = "qcom/msm8996/gemini/adsp.mbn";
 };
 
+&battery {
+	charge-full-design-microamp-hours = <3000000>;
+	constant-charge-current-max-microamp = <3000000>;
+};
+
 &blsp2_i2c3 {
 	haptics: drv2604@5a {
 		compatible = "ti,drv2604";
