--- a/arch/arm64/boot/dts/qcom/msm8996-xiaomi-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-xiaomi-common.dtsi
@@ -14,6 +14,13 @@
 #include <dt-bindings/pinctrl/qcom,pmic-gpio.h>
 
 / {
+	battery: battery {
+		compatible = "simple-battery";
+
+		voltage-min-design-microvolt = <3400000>;
+		voltage-max-design-microvolt = <4400000>;
+	};
+
 	clocks {
 		compatible = "simple-bus";
 
