--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -36,7 +36,8 @@ dtb-$(CONFIG_ARCH_QCOM)	+= msm8996-sony-xperia-tone-kagura.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= msm8996-sony-xperia-tone-keyaki.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= msm8996-xiaomi-gemini.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= msm8996-zte-axon7.dtb
-dtb-$(CONFIG_ARCH_QCOM)	+= msm8996pro-oneplus3t.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= msm8996pro-oneplus3t-s6e3fa3.dtb
+dtb-$(CONFIG_ARCH_QCOM)	+= msm8996pro-oneplus3t-s6e3fa5.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= msm8996pro-xiaomi-natrium.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= msm8996pro-xiaomi-scorpio.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= msm8998-asus-novago-tp370ql.dtb
