--- a/arch/arm64/boot/dts/qcom/msm8996-oneplus3.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-oneplus3.dtsi
@@ -57,20 +57,20 @@
 		vol_down {
 			label = "Volume Down";
 			linux,code = <KEY_VOLUMEDOWN>;
-			gpios = <&pm8994_gpios 2 GPIO_ACTIVE_HIGH>;
+			gpios = <&pm8994_gpios 2 GPIO_ACTIVE_LOW>;
 			debounce-interval = <15>;
 		};
 
 		vol_up {
 			label = "Volume Up";
 			linux,code = <KEY_VOLUMEUP>;
-			gpios = <&pm8994_gpios 3 GPIO_ACTIVE_HIGH>;
+			gpios = <&pm8994_gpios 3 GPIO_ACTIVE_LOW>;
 			debounce-interval = <15>;
 		};
 
 		hall_sensor {
 			label = "Hall Sensor";
-			gpios = <&tlmm 124 GPIO_ACTIVE_HIGH>;
+			gpios = <&tlmm 124 GPIO_ACTIVE_LOW>;
 			linux,input-type = <EV_SW>;
 			linux,code = <SW_LID>;
 			debounce-interval = <15>;
